<resources>
    <string name="app_name">Fish Match</string>
    <string name="menu_item_settings_title">Settings</string>
    <string name="menu_item_game_title">Play!</string>
    <string name="easy_difficulty_option">Easy (16 tiles) </string>
    <string name="medium_difficulty_option">Medium (20 tiles)</string>
    <string name="hard_difficulty_option">Hard (24 tiles)</string>
    <string name="easy_header">Easy</string>
    <string name="medium_header">Medium</string>
    <string name="hard_header">Hard</string>
    <string name="total_header">All Modes</string>
    <string name="menu_item_stats_title">Stats</string>
    <string name="stats_gamesplayed">Games Played: 0</string>
    <string name="stats_fastesttime">Fastest Time: ---</string>
    <string name="stats_pointsscored">Points Scored: 0</string>
    <string name="stats_leastflips">Shortest Win: ---</string>
    <string name="reset_stats">Reset Stats</string>
    <string name="reset_stats_confirm">Are you sure?</string>
    <string name="settings_game_speed_title">Game Speed"</string>
    <string name="settings_game_speed_option_1x">1x</string>
    <string name="settings_game_speed_option_2x">2x</string>
    <string name="settings_game_speed_option_4x">4x</string>
    <string name="apply">Apply Changes</string>
    <string name="settings_tile_backs_title">Tile Backs</string>
    <string name="tile_back_sea_blue">Sea\nBlue</string>
    <string name="tile_back_fire_coral">Fire\nCoral</string>
    <string name="tile_back_seaweed">Seaweed</string>
    <string name="tile_back_ocean_depth">Ocean\nDepth</string>
    <string name="tile_back_snail_shell">Snail\nShell</string>
    <string name="tile_back_kelp_weave">Kelp\nWeave</string>
    <string name="tile_back_starfish">Starfish</string>
    <string name="tile_back_crown">Crown</string>
    <string name="tile_back_sunset">Sunset</string>
    <string name="tile_back_sea_glass_kelp">Stained\nGlass Kelp</string>
    <string name="tile_back_fishy_tile">Fishy\nTile</string>
    <string name="tile_back_jellyfish">Jellyfish</string>
    <string name="tile_back_sea_blue_label">FREE</string>
    <string name="tile_back_fire_coral_label">25 Points</string>
    <string name="tile_back_seaweed_label">25 Points</string>
    <string name="tile_back_ocean_depth_label">50 Points</string>
    <string name="tile_back_snail_shell_label">100 Points</string>
    <string name="tile_back_kelp_weave_label">200 Points</string>
    <string name="tile_back_starfish_label">200 Points</string>
    <string name="tile_back_crown_label">200 Points</string>
    <string name="tile_back_sunset_label">300 Points</string>
    <string name="tile_back_sea_glass_kelp_label">300 Points</string>
    <string name="tile_back_fishy_tile_label">500 Points</string>
    <string name="tile_back_jellyfish_label">2000 Points</string>
    <string name="shop_point_total">Points Available: </string>
    <string name="congratsText">You Win! </string>
    <string name="winQuip">Nice Matching Out There </string>
    <string name="statsTitle">How Did You Do?</string>
    <string name="win_screen_button_title">Back to Start</string>
    <string name="backToStartButton">Quit\nGame</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>