<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/startFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/play_background_color"
    tools:context=".StartFragment">

    <ImageView
        android:id="@+id/tile_23"
        android:layout_width="424dp"
        android:layout_height="329dp"
        android:background="@drawable/fish_match_logo_no_background"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/startScreenQuip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/statsTitle"
        android:textAlignment="center"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/playButton"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/play_button"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:text="@string/menu_item_game_title"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.918" />

    <RadioGroup
        android:id="@+id/difficultyGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/playButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".93">

        <RadioButton
            android:id="@+id/easyDifficulty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/easy_difficulty_option"
            android:textColor="@color/black"/>

        <RadioButton
            android:id="@+id/mediumDifficulty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medium_difficulty_option"
            android:textColor="@color/black"/>

        <RadioButton
            android:id="@+id/hardDifficulty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hard_difficulty_option"
            android:textColor="@color/black"/>

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>